--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/hooliaah/Find-A-Friend/issues"
   },
-  "homepage": "https://github.com/hooliaah/Find-A-Friend#readme"
+  "homepage": "https://github.com/hooliaah/Find-A-Friend#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "path": "^0.12.7"
+  }
 }
